# domestic-recorder-buildroot

./: .gitignore  Buildroot.cmake  CMakeLists.txt  Config.in  Makefile  Raumfeld.cmake  build-finish.sh  build.sh  buildall.sh  buildlog.sh  getopt.inc
configs/: domestic_recorder_defconfig  domestic_recorder_usbrescue_defconfig
fs/: common.mk
gc4a/: createTokens.sh  xfer.sh
linux/: Config.in  linux.mk
package/: Config.in  Config.in.host  Makefile.autotools.in  Makefile.in  pkg-download.mk
project/: Makefile.in
raumfeld/: .gitignore  br2-audioadapter-arm.config  br2-audioadapter-armada.config  br2-base-armada.config  br2-base-geode.config  br2-devel-arm.config  br2-devel-geode.config  br2-development-x86_64.config  br2-imgrootfs-arm.config  br2-imgrootfs-armada.config  br2-imgrootfs-geode.config  br2-initramfs-arm.config  br2-initramfs-armada.config  br2-initramfs-geode.config  br2-remotecontrol-arm.config  br2-toolchain-arm.config  br2-toolchain-armada.config  br2-toolchain-geode.config  busybox-arm.config  busybox-geode.config  busybox-initramfs.config  busybox.config  consolidate-updates.sh  dev-fixup.sh  device-table-arm.txt  device-table-geode.txt  imgcreate.sh  kernel-am33xx-bsp-3.2.18.config  kernel-am33xx-bsp-3.2.18.diff  kernel-am33xx.config  kernel-am33xx.diff  kernel-arm-bootloader.patch  kernel-arm-no-ro-nand.patch  kernel-arm-rt.config  kernel-arm.config  kernel-arm.patch  kernel-armada-mwifiex.patch  kernel-base-armada.patch  (+28 more)
raumfeld/imgtool/: .gitignore  CMakeLists.txt  Makefile  README  img.c  img.h  imgcreate.c  imginfo.c  sha256.c  sha256.h
(+923 files in other folders)
